force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/SEL_AsyncDmlSetting__mdt.object-meta.xml
<CustomObject>
    <description>Control which objects can be processed thru the Async DML platform event as well as its supported DML operations. This is part of the Salesforce Enterprise Library (SEL) created by Macjules Sevilla.</description>
    <label>Async DML Setting</label>
    <pluralLabel>Async DML Settings</pluralLabel>
</CustomObject>