force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/fields/SEL_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the Async DML operation will be permitted by the framework.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>