force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/fields/SEL_IsDeleteAllowed__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsDeleteAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the framework will allow Delete. In future releases, this will be moved to a custom profile.</description>
    <label>Allow Delete</label>
    <type>Checkbox</type>
</CustomField>