force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/fields/SEL_IsInsertAllowed__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsInsertAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the framework will allow Insert. In future releases, this will be moved to a custom profile.</description>
    <label>Allow Insert</label>
    <type>Checkbox</type>
</CustomField>