force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/fields/SEL_IsUndeleteAllowed__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsUndeleteAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the framework will allow Undelete. In future releases, this will be moved to a custom profile.</description>
    <label>Allow Undelete</label>
    <type>Checkbox</type>
</CustomField>