force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/fields/SEL_IsUpdateAllowed__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsUpdateAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the framework will allow Update. In future releases, this will be moved to a custom profile.</description>
    <label>Allow Update</label>
    <type>Checkbox</type>
</CustomField>