force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/fields/SEL_IsUpsertAllowed__c.field-meta.xml
<CustomField>
    <fullName>SEL_IsUpsertAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, then the framework will allow Upsert. In future releases, this will be moved to a custom profile.</description>
    <label>Allow Upsert</label>
    <type>Checkbox</type>
</CustomField>