force-app/main/default/objects/SEL_AsyncDmlSetting__mdt/fields/SEL_Object__c.field-meta.xml
<CustomField>
    <fullName>SEL_Object__c</fullName>
    <description>Object API that is allowed by the Async DML framework.</description>
    <label>Object (API Name)</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>